Logo and image changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <!--<a class="navbar-brand" href="#">uxmint design</a>-->
             <div class="row header-logo">
                 <div class="col-md-5 ux-logo">
-                    <img src="./assets/images/uxmint-logo.svg" routerLink="/">
+                    <img src="./assets/images/uxmint-logo.svg" routerLink="/" alt="Logo">
                 </div>
                 <div class="col-md-1">
                     <div class="line"></div>
@@ -31,7 +31,7 @@
                     <div class="lines"></div>
                 </div>
                 <li class="nav-item menu">
-                    <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png"></a>
+                    <a class="nav-link menu-activator" (click)="openMenu()"> <img src="./assets/images/menu.png" alt="menu"></a>
                 </li>
               </ul>
             </div>
@@ -58,7 +58,7 @@
                 </li>
             </ul>
             <!--<div class="button">
-                <div class="btn btn-white">Let's Talk <img src="./assets/images/rightarrow.svg"></div>
+                <div class="btn btn-white">Let's Talk <img src="./assets/images/rightarrow.svg" alt="letTalk"></div>
             </div>-->
         </div>
         <div class="col-md-3">
@@ -108,20 +108,10 @@
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a>
+                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a><span>|</span> <a href="https://www.instagram.com/uxmint.design/" target="_blank">Instagram</a>
                 </li>
-               
-                
-                <!-- <li>
-                    <a href="https://medium.com/uxmint">Medium</a>
-                </li> -->
-            </ul> 
-       
-             
-             
-          
+            </ul>           
         </div>
-    
     </div>
     <hr class="footer">
     <div class="footer-bottom">
