--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -62,7 +62,7 @@
          <ng-template ngbPanelTitle>
             <div class="dis_flex">
                <div>  Fixed bid </div>
-               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg"> </div>
+               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg" alt="Fixed Bid"> </div>
             </div>
           </ng-template> 
         <ng-template ngbPanelContent >
@@ -78,7 +78,7 @@
                <div class="row logo-image">
                   <div class="col-md-1">
                      <div class="logo-images">
-                        <img src="./assets/images/services/logo-7.svg">
+                        <img src="./assets/images/services/logo-7.svg" alt="Fixed Bid">
                      </div>
                   </div>
                   <div class="col-md-8">
@@ -90,7 +90,7 @@
                <div class="row logo-image">
                   <div class="col-md-2">
                      <div class="logo-images">
-                        <img src="./assets/images/services/logo-8.svg">
+                        <img src="./assets/images/services/logo-8.svg" alt="Fixed Bid">
                      </div>
                   </div>
                   <div class="col-md-8">
@@ -102,7 +102,7 @@
                <div class="row logo-image">
                   <div class="col-md-2">
                      <div class="logo-images">
-                        <img src="./assets/images/services/logo-9.svg">
+                        <img src="./assets/images/services/logo-9.svg" alt="Fixed Bid">
                      </div>
                   </div>
                   <div class="col-md-8">
@@ -114,7 +114,7 @@
                <div class="row logo-image">
                   <div class="col-md-2">
                      <div class="logo-images">
-                        <img src="./assets/images/services/logo-10.svg">
+                        <img src="./assets/images/services/logo-10.svg" alt="Fixed Bid">
                      </div>
                   </div>
                   <div class="col-md-8">
@@ -131,7 +131,7 @@
          <ng-template ngbPanelTitle>
             <div class="dis_flex">
                <div><h2>Time & Material</h2></div>
-               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg"> </div>
+               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg" alt="Time & Material"> </div>
             </div>
           </ng-template> 
          <ng-template ngbPanelContent>
@@ -147,7 +147,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-7.svg">
+                           <img src="./assets/images/services/logo-7.svg" alt="Time & Material">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -159,7 +159,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-8.svg">
+                           <img src="./assets/images/services/logo-8.svg" alt="Time & Material">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -171,7 +171,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-9.svg">
+                           <img src="./assets/images/services/logo-9.svg" alt="Time & Material">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -188,7 +188,7 @@
          <ng-template ngbPanelTitle>
             <div class="dis_flex">
                <div><h2>Dedicated Team Model</h2></div>
-               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg"> </div>
+               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg" alt="Dedicated Team Model"> </div>
             </div>
           </ng-template>
          <ng-template ngbPanelContent>
@@ -203,7 +203,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-7.svg">
+                           <img src="./assets/images/services/logo-7.svg" alt="Dedicated Team Model">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -215,7 +215,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-8.svg">
+                           <img src="./assets/images/services/logo-8.svg" alt="Dedicated Team Model">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -227,7 +227,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-9.svg">
+                           <img src="./assets/images/services/logo-9.svg" alt="Dedicated Team Model">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -244,7 +244,7 @@
          <ng-template ngbPanelTitle>
             <div class="dis_flex">
                <div><h2>Staff Augmentation Model</h2></div>
-               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg"> </div>
+               <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg" alt="Staff Augmentation Model"> </div>
             </div>
           </ng-template>
          <ng-template ngbPanelContent>
@@ -259,7 +259,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-7.svg">
+                           <img src="./assets/images/services/logo-7.svg" alt="Staff Augmentation Model">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -271,7 +271,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-8.svg">
+                           <img src="./assets/images/services/logo-8.svg" alt="Staff Augmentation Model">
                         </div>
                      </div>
                      <div class="col-md-8">
@@ -283,7 +283,7 @@
                   <div class="row logo-image">
                      <div class="col-md-2">
                         <div class="logo-images">
-                           <img src="./assets/images/services/logo-9.svg">
+                           <img src="./assets/images/services/logo-9.svg" alt="Staff Augmentation Model">
                         </div>
                      </div>
                      <div class="col-md-8">
