--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -80,10 +80,10 @@
             <h5>Follow Us On</h5>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank"> <img src="./assets/images/linkedin1.svg"></a>
+                    <a href="https://www.linkedin.com/company/uxmint-design/" target="_blank"> <img src="./assets/images/linkedin1.svg" alt="Linked in"></a>
                 </li>
                 <li>
-                    <a href="https://medium.com/uxmint" target="_blank"> <img src="./assets/images/medium1.svg" class="medium"></a>
+                    <a href="https://medium.com/uxmint" target="_blank"> <img src="./assets/images/medium1.svg" class="medium" alt="medium"></a>
                 </li>
             </ul>
         </div>
