--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -357,7 +357,7 @@
         font-family: "Muli", sans-serif;
         margin-top: 30px;
         position: relative;
-        transition:all 1.5s;
+        transition:all .3s;
         z-index: 1;
         text-decoration: none;
         overflow:hidden;
