--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-                <img src="./assets/images/services/Asset14.svg">
+                <img src="./assets/images/services/Asset14.svg" alt="End To End Development">
             </div>
         </div>
     </div>
@@ -33,18 +33,18 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon-22.svg"><span>Understanding Systems</span>
+                        <img src="./assets/images/services/icon-22.svg" alt="End To End Development"><span>Understanding Systems</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-23.svg"><span>Backend Framework</span>
+                        <img src="./assets/images/services/icon-23.svg" alt="End To End Development"><span>Backend Framework</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon-24.svg"><span>API Web Service</span>
+                        <img src="./assets/images/services/icon-24.svg" alt="End To End Development"><span>API Web Service</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-25.svg"><span>Scalability</span>
+                        <img src="./assets/images/services/icon-25.svg" alt="End To End Development"><span>Scalability</span>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
              <ng-template ngbPanelTitle>
                 <div class="dis_flex">
                    <div> API Web Service </div>
-                   <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                   <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
                 </div>
               </ng-template> 
             <ng-template ngbPanelContent >
@@ -161,7 +161,7 @@
              <ng-template ngbPanelTitle>
                 <div class="dis_flex">
                    <div>Backend Framework</div>
-                   <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                   <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
                 </div>
               </ng-template> 
              <ng-template ngbPanelContent>
@@ -177,7 +177,7 @@
             <ng-template ngbPanelTitle>
                <div class="dis_flex">
                   <div> Understanding Systems </div>
-                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
                </div>
              </ng-template> 
            <ng-template ngbPanelContent >
@@ -192,7 +192,7 @@
             <ng-template ngbPanelTitle>
                <div class="dis_flex">
                   <div>Scalability </div>
-                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
                </div>
              </ng-template> 
            <ng-template ngbPanelContent >
