--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-              <img src="./assets/images/services/Asset12.svg">
+              <img src="./assets/images/services/Asset12.svg" alt="Interface Design">
             </div>
         </div>
     </div>
@@ -35,24 +35,24 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon-11.svg"><span>Moodboard</span>
+                        <img src="./assets/images/services/icon-11.svg" alt="Interface Design"><span>Moodboard</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-12.svg"><span>Visual Language</span>
+                        <img src="./assets/images/services/icon-12.svg" alt="Interface Design"><span>Visual Language</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-13.svg"><span>Iconography</span>
+                        <img src="./assets/images/services/icon-13.svg" alt="Interface Design"><span>Iconography</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon-14.svg"><span>Design systems</span>
+                        <img src="./assets/images/services/icon-14.svg" alt="Interface Design"><span>Design systems</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-15.svg"><span>Illustrations</span>
+                        <img src="./assets/images/services/icon-15.svg" alt="Interface Design"><span>Illustrations</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-16.svg"><span>Brand identity</span>
+                        <img src="./assets/images/services/icon-16.svg" alt="Interface Design"><span>Brand identity</span>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div> User Interface Design </div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -179,7 +179,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>User Interface Evaluation</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template> 
            <ng-template ngbPanelContent>
@@ -194,7 +194,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Visual Design System</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -209,7 +209,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Branding & Identity</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -235,7 +235,7 @@
                   <ngu-tile *nguCarouselDef="let item; let i = index">
                       <div class="class">
                           <div class="image">
-                              <a [routerLink]="item.url"><img [src]="item.img"></a>
+                              <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>
                           </div>
                           <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                           <h4>{{ item.sub }}</h4>
