--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-              <img src="./assets/images/services/Asset13.svg">
+              <img src="./assets/images/services/Asset13.svg" alt="UI Development">
             </div>
         </div>
     </div>
@@ -33,21 +33,21 @@
               </div>
               <div class="col-md-4">
                   <div class="list">
-                      <img src="./assets/images/services/icon-17.svg"><span>Brief Understanding </span>
+                      <img src="./assets/images/services/icon-17.svg" alt="UI Development"><span>Brief Understanding </span>
                   </div>
                   <div class="list">
-                      <img src="./assets/images/services/icon-19.svg"><span>Platform</span>
+                      <img src="./assets/images/services/icon-19.svg" alt="UI Development"><span>Platform</span>
                   </div>
                   <div class="list">
-                      <img src="./assets/images/services/icon-20.svg"><span>Framework</span>
+                      <img src="./assets/images/services/icon-20.svg" alt="UI Development"><span>Framework</span>
                   </div>
               </div>
               <div class="col-md-3">
                   <div class="list">
-                      <img src="./assets/images/services/icon-18.svg"><span>Manage</span>
+                      <img src="./assets/images/services/icon-18.svg" alt="UI Development"><span>Manage</span>
                   </div>
                   <div class="list">
-                      <img src="./assets/images/services/icon-21.svg"><span>Testing</span>
+                      <img src="./assets/images/services/icon-21.svg" alt="UI Development"><span>Testing</span>
                   </div>
               </div>
           </div>
@@ -93,43 +93,43 @@
                     <div class="row">
                       <div class="col-md-3">
                           <div class="list">
-                              <img src="./assets/images/services/website.svg">
+                              <img src="./assets/images/services/website.svg" alt="UI Development">
                               <h6>Website</h6>
                           </div>
                           <div class="list">
-                            <img src="./assets/images/services/Hybrid.svg">
+                            <img src="./assets/images/services/Hybrid.svg" alt="UI Development">
                             <h6>Hybrid</h6>
                         </div>
                         <div class="list">
-                          <img src="./assets/images/services/Node.svg">
+                          <img src="./assets/images/services/Node.svg" alt="UI Development">
                           <h6>Node</h6>
                       </div>
                       </div>
                       <div class="col-md-3">
                           <div class="list">
-                              <img src="./assets/images/services/HTML.svg">
+                              <img src="./assets/images/services/HTML.svg" alt="UI Development">
                               <h6>HTML 5</h6>
                           </div>
                           <div class="list">
-                              <img src="./assets/images/services/Angular.svg">
+                              <img src="./assets/images/services/Angular.svg" alt="UI Development">
                               <h6>Angular</h6>
                           </div>
                           <div class="list">
-                            <img src="./assets/images/services/React.svg">
+                            <img src="./assets/images/services/React.svg" alt="UI Development">
                             <h6>React</h6>
                         </div>
                       </div>
                       <div class="col-md-3">
                         <div class="list">
-                          <img src="./assets/images/services/Windows.svg">
+                          <img src="./assets/images/services/Windows.svg" alt="UI Development">
                           <h6>Windows</h6>
                       </div>
                       <div class="list">
-                        <img src="./assets/images/services/Android.svg">
+                        <img src="./assets/images/services/Android.svg" alt="UI Development">
                         <h6>Android</h6>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/iOS.svg">
+                        <img src="./assets/images/services/iOS.svg" alt="UI Development">
                         <h6 class="lists">iOS</h6>
                     </div>
                     </div>
@@ -203,7 +203,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div> Brief Understanding </div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrrow"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -218,7 +218,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div> Platform </div>
-                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrrow"> </div>
              </div>
            </ng-template> 
          <ng-template ngbPanelContent >
@@ -227,43 +227,43 @@
               <div class="row">
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/website.svg">
+                        <img src="./assets/images/services/website.svg" alt="Website">
                         <h6>Website</h6>
                     </div>
                     <div class="list">
-                      <img src="./assets/images/services/Hybrid.svg">
+                      <img src="./assets/images/services/Hybrid.svg" alt="Hybrid">
                       <h6>Hybrid</h6>
                   </div>
                   <div class="list">
-                    <img src="./assets/images/services/Node.svg">
+                    <img src="./assets/images/services/Node.svg" alt="Node">
                     <h6>Node</h6>
                 </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/HTML.svg">
+                        <img src="./assets/images/services/HTML.svg" alt="HTML 5">
                         <h6>HTML 5</h6>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/Angular.svg">
+                        <img src="./assets/images/services/Angular.svg" alt="Angular">
                         <h6>Angular</h6>
                     </div>
                     <div class="list">
-                      <img src="./assets/images/services/React.svg">
+                      <img src="./assets/images/services/React.svg" alt="React">
                       <h6>React</h6>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="list">
-                    <img src="./assets/images/services/Windows.svg">
+                    <img src="./assets/images/services/Windows.svg" alt="Window">
                     <h6>Windows</h6>
                 </div>
                 <div class="list">
-                  <img src="./assets/images/services/Android.svg">
+                  <img src="./assets/images/services/Android.svg" alt="Android">
                   <h6>Android</h6>
               </div>
               <div class="list">
-                  <img src="./assets/images/services/iOS.svg">
+                  <img src="./assets/images/services/iOS.svg" alt="iOS">
                   <h6>iOS</h6>
               </div>
               </div>
@@ -276,7 +276,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div> Framework </div>
-                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
              </div>
            </ng-template> 
          <ng-template ngbPanelContent >
@@ -291,7 +291,7 @@
         <ng-template ngbPanelTitle>
            <div class="dis_flex">
               <div> Manage </div>
-              <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
            </div>
          </ng-template> 
        <ng-template ngbPanelContent >
@@ -306,7 +306,7 @@
       <ng-template ngbPanelTitle>
          <div class="dis_flex">
             <div> Testing & Implementation </div>
-            <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+            <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
          </div>
        </ng-template> 
      <ng-template ngbPanelContent >
@@ -335,7 +335,7 @@
                   <ngu-tile *nguCarouselDef="let item; let i = index">
                       <div class="class">
                           <div class="image">
-                              <a [routerLink]="item.url"><img [src]="item.img"></a>
+                              <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>
                           </div>
                           <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                           <h4>{{ item.sub }}</h4>
