--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-              <img src="./assets/images/services/Asset15.svg">
+              <img src="./assets/images/services/Asset15.svg" alt="Usaility Testing">
             </div>
         </div>
     </div>
@@ -33,21 +33,21 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon-26.svg"><span>Understanding User Objectives</span>
+                        <img src="./assets/images/services/icon-26.svg" alt="Usaility Testing"><span>Understanding User Objectives</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-27.svg"><span>Reduction in Development Cost</span>
+                        <img src="./assets/images/services/icon-27.svg" alt="Usaility Testing"><span>Reduction in Development Cost</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-28.svg"><span>Upfront Risk Mitigation</span>
+                        <img src="./assets/images/services/icon-28.svg" alt="Usaility Testing"><span>Upfront Risk Mitigation</span>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon-29.svg"><span>Identifiying Key Tasks</span>
+                        <img src="./assets/images/services/icon-29.svg" alt="Usaility Testing"><span>Identifiying Key Tasks</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon-30.svg"><span>Better User Experience</span>
+                        <img src="./assets/images/services/icon-30.svg" alt="Usaility Testing"><span>Better User Experience</span>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div> Controlled Environment Testing </div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -192,7 +192,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Exploratory Testing</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template> 
            <ng-template ngbPanelContent>
@@ -207,7 +207,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Remote Testing</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -222,7 +222,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Contextual Testing</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -292,7 +292,7 @@
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
-                                <a [routerLink]="item.url"><img [src]="item.img"></a>
+                                <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>
                             </div>
                             <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                             <h4>{{ item.sub }}</h4>
