--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-              <img src="./assets/images/services/Asset11.svg">
+              <img src="./assets/images/services/Asset11.svg" alt="User Experience">
             </div>
         </div>
     </div>
@@ -33,21 +33,21 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon1.svg"><span>Understanding Business</span>
+                        <img src="./assets/images/services/icon1.svg" alt="Understanding Business"><span>Understanding Business</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon2.svg"><span>Framework</span>
+                        <img src="./assets/images/services/icon2.svg" alt="Framework"><span>Framework</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon3.svg"><span>Testing</span>
+                        <img src="./assets/images/services/icon3.svg" alt="Testing"><span>Testing</span>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/icon4.svg"><span>Platform</span>
+                        <img src="./assets/images/services/icon4.svg" alt="Platform"><span>Platform</span>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/icon5.svg"><span>Manage</span>
+                        <img src="./assets/images/services/icon5.svg" alt="Manage"><span>Manage</span>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div> Stake Holder Discussion </div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -189,7 +189,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Discovering User Needs</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="arrow"> </div>
               </div>
             </ng-template> 
            <ng-template ngbPanelContent>
@@ -209,7 +209,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Supporting Solution</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -228,7 +228,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div>Test Feature Viability</div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow"> </div>
               </div>
             </ng-template>
            <ng-template ngbPanelContent>
@@ -258,7 +258,7 @@
                   <ngu-tile *nguCarouselDef="let item; let i = index">
                       <div class="class">
                           <div class="image">
-                              <a [routerLink]="item.url"><img [src]="item.img"></a>
+                              <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>
                           </div>
                           <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                           <h4>{{ item.sub }}</h4>
