--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
@@ -3,13 +3,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 orderone">
-                        <img src="./assets/images/works/Automobile-1.png">
+                        <img src="./assets/images/works/Automobile-1.png" alt="Automobile Usability">
                 </div>
             </div>
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/Automobile-2.png">
+        <img src="./assets/images/works/Automobile-2.png" alt="Automobile Usability">
     </div>
     <div class="approach-work">
         <div class="container">
@@ -65,16 +65,16 @@
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
-                <div class="button">
-                    <div class="btn btnn" routerLink="/works">See All Works</div>
-                </div>
+                <div class="anime-button">
+                    <a  class="swipe-button" routerLink="/works">See All Works</a>
+                  </div>
             </div>
             <div class="col-md-6 right">
                 <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
-                                <a [routerLink]="item.url"><img [src]="item.img"></a>
+                                <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>
                             </div>
                             <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                             <h4>{{ item.sub }}</h4>
@@ -95,9 +95,9 @@
              <div class="col-md-4">
              <h2>Let's craft design together!</h2>
           </div>
-             <div class="button">
-                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
-             </div>
+          <div class="anime-button-white lets-talk">
+            <a  class="swipe-button" routerLink="/contact-us">Let's Talk</a>
+          </div>
         </div>
         </div>
      </div>
