--- a/src/app/modules/work/components/skill-development/skill-development.component.html
+++ b/src/app/modules/work/components/skill-development/skill-development.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/works5.webp">
+                        <img src="./assets/images/works/works5.webp" alt="Skill Development">
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/skill2.webp">
+        <img src="./assets/images/works/skill2.webp" alt="Skill Development">
     </div>
     <div class="approach">
         <div class="container">
@@ -113,7 +113,7 @@
         </div>
     </div>
     <div class="green-image">
-        <img src="./assets/images/works/skill3.jpg">
+        <img src="./assets/images/works/skill3.jpg" alt="Skill Development">
     </div>
     <div class="work-description">
         <div class="container">
@@ -125,7 +125,7 @@
         </div>
     </div>
     <div class="typography-image">
-        <img src="./assets/images/works/skill4.jpg">
+        <img src="./assets/images/works/skill4.jpg" alt="Skill Development">
     </div>
     <div class="approach">
         <div class="container">
@@ -135,7 +135,7 @@
                     <p>The mobile Application was designed with features that users can use on the go and thus making the experience easy and smooth</p>
             </div>
             <div class="col-md-7">
-                <img src="./assets/images/works/works5.webp">
+                <img src="./assets/images/works/works5.webp" alt="Skill Development">
             </div>
         </div>
         </div>
@@ -149,7 +149,7 @@
                         Access for different features and functionalities that needed the use of desktop </p>
             </div>
             <div class="col-md-7 only-mobile">
-                <img src="./assets/images/works/skill6.webp">
+                <img src="./assets/images/works/skill6.webp" alt="Skill Development">
             </div>
         </div>
         </div>
@@ -160,8 +160,8 @@
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
-                <div class="button">
-                    <div class="btn btnn" routerLink="/works">See All Works</div>
+                <div class="anime-button">
+                    <a  class="swipe-button" routerLink="/works">See All Works</a>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -169,7 +169,7 @@
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
-                                <a [routerLink]="item.url"><img [src]="item.img"></a>  
+                                <a [routerLink]="item.url"><img [src]="item.img" alt="Blogs"></a>  
                             </div>
                             <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                             <h4>{{ item.sub }}</h4>
@@ -190,9 +190,9 @@
              <div class="col-md-4">
              <h2>Let's craft design together!</h2>
           </div>
-             <div class="button">
-                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
-             </div>
+          <div class="anime-button-white lets-talk">
+            <a class="swipe-button" routerLink="/contact-us">Let's Talk</a>
+          </div>
         </div>
         </div>
      </div>
