--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -33,13 +33,13 @@
             <div class="design-right">
                 <ul class="logo">
                 <li>
-                  <img src="./assets/images/services/logo-1.svg">
+                  <img src="./assets/images/services/logo-1.svg" alt="Client Logo">
                 </li>
                 <li>
-                  <img src="./assets/images/services/logo-3.svg">
+                  <img src="./assets/images/services/logo-3.svg" alt="Client Logo">
                 </li>
                 <li>
-                  <img src="./assets/images/services/logo-5.svg">
+                  <img src="./assets/images/services/logo-5.svg" alt="Client Logo">
                 </li>
             </ul>
          </div>
@@ -48,13 +48,13 @@
             <div class="design-right img_cover">
                 <ul class="logo">
                 <li>
-                  <img src="./assets/images/services/logo-2.svg">
+                  <img src="./assets/images/services/logo-2.svg" alt="Client Logo">
                 </li>
                 <li>
-                  <img src="./assets/images/services/logo-4.svg">
+                  <img src="./assets/images/services/logo-4.svg" alt="Client Logo">
                 </li>
                 <li>
-                  <img src="./assets/images/services/logo-6.svg">
+                  <img src="./assets/images/services/logo-6.svg" alt="Client Logo">
                 </li>
             </ul>
          </div>
@@ -64,22 +64,22 @@
          </div>
          <div class="custom-slider-main only-mobile">
             <div class="icon1">
-               <img src="./assets/images/about/logo-1.svg">
+               <img src="./assets/images/about/logo-1.svg" alt="Client Logo">
             </div>
             <div class="icon2">
-               <img src="./assets/images/about/logo-2.svg">
+               <img src="./assets/images/about/logo-2.svg" alt="Client Logo">
             </div>
             <div class="icon3">
-               <img src="./assets/images/about/logo-3.svg">
+               <img src="./assets/images/about/logo-3.svg" alt="Client Logo">
             </div>
             <div class="icon4">
-               <img src="./assets/images/about/logo-4.svg">
+               <img src="./assets/images/about/logo-4.svg" alt="Client Logo">
             </div>
             <div class="icon5">
-               <img src="./assets/images/about/logo-5.svg">
+               <img src="./assets/images/about/logo-5.svg" alt="Client Logo">
             </div>
             <div class="icon6">
-               <img src="./assets/images/about/logo-6.svg">
+               <img src="./assets/images/about/logo-6.svg" alt="Client Logo">
             </div>
          </div>
       </div>
