--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -405,7 +405,7 @@ iframe {
         font-family: "Muli", sans-serif;
         margin-top: 30px;
         position: relative;
-        transition:all 1.5s;
+        transition:all .3s;
         z-index: 1;
         text-decoration: none;
         overflow:hidden;
@@ -418,7 +418,7 @@ iframe {
         top:0;
         left:0;
         background-color: #C3343C;
-        transition:all 1.5s;
+        transition:all .3s;
         transform: translateX(-100%);
         z-index: -1;
         overflow:hidden;
