--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,16 +17,13 @@
                   <h4>UX . UI . Mobile . B2B</h4>
              
                   <div class="anime-button">
-                     <a   routerLink="/work/networking">Case Study</a>
+                     <a routerLink="/work/networking">Case Study</a>
                   </div>
-               </div>
-               
-                 
-              
+               </div>            
             </div>
             <div class="col-md-6 step-image">
                <div class="image">
-                  <img src="./assets/images/home/transformation.png">
+                  <img src="./assets/images/home/transformation.png" alt="Case Study">
                </div>
             </div>
          </div>
@@ -59,23 +56,35 @@
    <div class="custom-slider-main ">
       <div class="marquee-content">
       <div class="icon">
-         <img src="./assets/images/home/logo2.svg">
+         <img src="./assets/images/home/logo2.svg" alt="Client Logo">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo4.svg">
+         <img src="./assets/images/home/logo4.svg" alt="Client Logo">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo5.svg">
+         <img src="./assets/images/home/logo5.svg" alt="Client Logo">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo6.svg">
+         <img src="./assets/images/home/logo6.svg" alt="Client Logo">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo3.svg">
+         <img src="./assets/images/home/logo3.svg" alt="Client Logo">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo1.svg">
+         <img src="./assets/images/home/logo1.svg" alt="Client Logo">
+      </div> 
+      <div class="icon">
+         <img src="./assets/images/home/logo7.svg" alt="Client Logo">
       </div>  
+      <div class="icon">
+         <img src="./assets/images/home/logo8.svg" alt="Client Logo">
+      </div> 
+      <div class="icon">
+         <img src="./assets/images/home/logo9.svg" alt="Client Logo">
+      </div> 
+      <div class="icon">
+         <img src="./assets/images/home/logo10.svg" alt="Client Logo">
+      </div> 
    </div>
    </div>
 
@@ -124,7 +133,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services" alt="Services">
                      </div>
                   </div>
                </div>
@@ -149,7 +158,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services" alt="Service">
                      </div>
                   </div>
                </div>
@@ -176,7 +185,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services" alt="Services">
                      </div>
                   </div>
                </div>
@@ -205,7 +214,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime" src="./assets/images/home/arrow.png"routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services" alt="Service">
                      </div>
                   </div>
                </div>
@@ -232,7 +241,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime" src="./assets/images/home/arrow.png" routerLink="services" alt="Service">
                      </div>
                   </div>
                </div>
@@ -260,7 +269,7 @@
                   </div>
                   <div class="col-md-3">
                      <div class="image">
-                        <img class="arrow-anime"  src="./assets/images/home/arrow.png" routerLink="services">
+                        <img class="arrow-anime"  src="./assets/images/home/arrow.png" routerLink="services" alt="Service">
                      </div>
                   </div>
                </div>
@@ -392,8 +401,6 @@
                   <p>Mobile Applications</p>
                </div>
             </div>
-           
-           
          </div>
       </div>
    </div>
@@ -410,7 +417,7 @@
             <ngu-tile *nguCarouselDef="let item; let i = index">
                <div class="class">
                   <div class="image">
-                     <img class="img-anime" [src]="item.img">
+                     <img class="img-anime" [src]="item.img" alt="Blogs">
                   </div>
                   <h3><a [href]="item.url" target="_blank">{{ item.title }}</a></h3>
                   <h4>{{ item.sub }}</h4>
