--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -89,7 +89,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div><h2>User Experience </h2></div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.svg" alt="User Experience"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -105,7 +105,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div><h2>Interface Design</h2></div>
-                 <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg"></div>
+                 <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg" alt="Interface Design"></div>
               </div>
             </ng-template> 
            <ng-template ngbPanelContent>
@@ -121,7 +121,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>UI Development</h2></div>
-                <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg"></div>
+                <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg" alt="UI Development"></div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
@@ -137,7 +137,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>End To End Development</h2></div>
-                <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg"> </div>
+                <div class="arrow_rotate"> <img src="./assets/images/about/arrow.svg" alt="End to End Development"> </div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
@@ -153,7 +153,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>Usability Testing</h2></div>
-                <div class="arrow_rotate"><img src="./assets/images/about/arrow.svg"></div>
+                <div class="arrow_rotate"><img src="./assets/images/about/arrow.svg" alt="Usability Testing"></div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
@@ -255,7 +255,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div><h2>Enterprise Applications </h2></div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow Rotate"> </div>
               </div>
             </ng-template> 
           <ng-template ngbPanelContent >
@@ -274,7 +274,7 @@
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
                  <div><h2>Information Portals</h2></div>
-                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow Rotate"> </div>
               </div>
             </ng-template> 
            <ng-template ngbPanelContent>
@@ -292,7 +292,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>Product Development</h2></div>
-                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow Rotate"> </div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
@@ -313,7 +313,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>Digital Transformation</h2></div>
-                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow Rotate"> </div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
@@ -336,7 +336,7 @@
           <ng-template ngbPanelTitle>
              <div class="dis_flex">
                 <div><h2>Strategy Design</h2></div>
-                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png" alt="Arrow Rotate"> </div>
              </div>
            </ng-template> 
           <ng-template ngbPanelContent>
