--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -48,7 +48,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/network1.webp">
+                        <img src="./assets/images/works/network1.webp" alt="Digital Transformation for Telcom">
                      </div>
                   </div>
                </div>
@@ -59,7 +59,7 @@
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works2.png">
+                        <img src="./assets/images/works/works2.png" alt="Event Hosting made stressless"> 
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -95,7 +95,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/works3.png">
+                        <img src="./assets/images/works/works3.png" alt="To adapt organic food as a lifestyle">
                      </div>
                   </div>
                </div>
@@ -107,7 +107,7 @@
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works4.png">
+                        <img src="./assets/images/works/works4.png" alt="Website for Startup">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -116,7 +116,7 @@
                            <h2>Website for Startup</h2>
                            <p>UX . UI . B2C</p>
                            <div class="anime-button">
-                              <a   routerLink="/work/uxahead">Case Study</a>
+                              <a routerLink="/work/uxahead">Case Study</a>
                            </div>  
                         </div>
                      </div>
@@ -133,13 +133,13 @@
                         <h2>A designers platform for creative upskill</h2>
                         <p>UX . UI . Mobile . Web . B2C</p>
                         <div class="anime-button">
-                           <a   routerLink="/work/skill-development">Case Study</a>
+                           <a routerLink="/work/skill-development">Case Study</a>
                         </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/works5.webp">
+                        <img src="./assets/images/works/works5.webp" alt="A designers platform for creative upskill">
                      </div>
                   </div>
                </div>
@@ -150,7 +150,7 @@
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works6.png">
+                        <img src="./assets/images/works/works6.png" alt="Child Care Portal">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
@@ -176,13 +176,13 @@
                         <h2>A Customer Advocacy Platform </h2>
                         <p>UX . UI . Web . B2B2C</p>
                         <div class="anime-button">
-                           <a   routerLink="/work/marketing">Case Study</a>
+                           <a routerLink="/work/marketing">Case Study</a>
                         </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/market1.webp">
+                        <img src="./assets/images/works/market1.webp" alt="A Customer Advocacy Platform">
                      </div>
                   </div>
                </div>
@@ -193,17 +193,16 @@
                <div class="row">
                   <div class="col-md-6 orderone">
                      <div class="left-image">
-                        <img src="./assets/images/works/works8.png">
+                        <img src="./assets/images/works/works8.png" alt="Automobile Usability Testing">
                      </div>
                   </div>
                   <div class="col-md-6 ordertwo">
                      <div class="container">
                         <div class="right-content">
-                           <h2>Automobile Usability
-                              Testing</h2>
+                           <h2>Automobile Usability Testing</h2>
                            <p>UUX . UI . Web .Mobile . B2C</p>
                            <div class="anime-button">
-                              <a   routerLink="/work/automobile-usability">Case Study</a>
+                              <a routerLink="/work/automobile-usability">Case Study</a>
                            </div>
                         </div>
                      </div>
@@ -220,13 +219,13 @@
                         <h2>Repository of Accomplishments</h2>
                         <p>UX . UI . Web . B2C</p>
                         <div class="anime-button">
-                           <a   routerLink="/work/construction-portal">Case Study</a>
+                           <a routerLink="/work/construction-portal">Case Study</a>
                         </div>
                      </div>
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="right-image">
-                        <img src="./assets/images/works/works9.png">
+                        <img src="./assets/images/works/works9.png" alt="Repository of Accomplishments">
                      </div>
                   </div>
                </div>
