--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-6 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/child4.png">
+                        <img src="./assets/images/works/child4.png" alt="Childcare Portal">
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/child2.jpg">
+        <img src="./assets/images/works/child2.jpg" alt="Childcare Portal">
     </div>
     <div class="target-strategy">
         <div class="container">
@@ -71,8 +71,8 @@
         </div>
     </div>
     <div class="needs-challenges">
-        <div class="row">
-            <div class="container">
+        <div class="container">
+            <div class="row">
             <div class="col-md-8">
                     <h2>The Challenge</h2>
                     <hr class="line"> 
@@ -94,16 +94,16 @@
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
-                <div class="button">
-                    <div class="btn btnn" routerLink="/works">See All Works</div>
-                </div>
+                <div class="anime-button">
+                    <a  class="swipe-button" routerLink="/works">See All Works</a>
+                  </div>
             </div>
             <div class="col-md-6 right">
                 <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
-                                <a [routerLink]="item.url"> <img [src]="item.img"></a>
+                                <a [routerLink]="item.url"> <img [src]="item.img" alt="Blogs"></a>
                             </div>
                             <h3><a [routerLink]="item.url">{{ item.title }}</a></h3>
                             <h4>{{ item.sub }}</h4>
@@ -124,9 +124,9 @@
              <div class="col-md-4">
              <h2>Let's craft design together!</h2>
           </div>
-             <div class="button">
-                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
-             </div>
+          <div class="anime-button-white lets-talk">
+            <a  class="swipe-button" routerLink="/contact-us">Let's Talk</a>
+          </div>
         </div>
         </div>
      </div>
